Ajustando o campo de telefone perfil

--- a/perfil/templates/perfil/reset_senha.html
+++ b/perfil/templates/perfil/reset_senha.html
@@ -15,8 +15,7 @@
   </div>
  
   <div class="form-group col-md-8 offset-md-2">
-<form method="POST" enctype="multipart/form-data" action="{% url 'perfil:reset_password' %}">
-  {% csrf_token %}
+  
     <p> Selecione sua Unidade : </p>
     <select id="unidade" name="unidade" class="select form-control form-control">
       <option value="" selected="">----------</option>
@@ -36,19 +35,29 @@
     <input type="text" id="username" name="id_username" class="form-control">
   </div>
 
-
   <div class="form-group col-md-8 offset-md-2">
     <p> Qual a data de sua admissão : </p>
     <input type="text" id="admissao" name="admissao" class="form-control" data-mask="00/00/0000" placeholder="DD/MM/AAAA">
   </div>
-  </form>
 
   <div class="form-group col-md-8 offset-md-2">
     <a href="{% url 'chamados:enviar' %}" class="btn btn-warning ml-3 float-right w-25" role="button">Voltar</a>
-    <button type="submit" class="btn btn-success ml-3 float-right w-25">Enviar Resposta</button>
+    <button type="submit" id="send-answer" class="btn btn-success ml-3 float-right w-25">Enviar Resposta</button>
+  </div>
+
+  <div class="form-group col-md-8 offset-md-2" id="reset-password">
+    <form method="POST" enctype="multipart/form-data" action="{% url 'perfil:reset_password' %}">
+      {% csrf_token %}
+      <p> Nova Senha: </p>
+      <input type="text" class="form-control" name="new_password1" id="id_new_password1">
+  
+      <p> Confirmação de Nova Senha: </p>
+      <input type="text" class="form-control" name="new_password2" id="id_new_password2">
+  
+      <button class="btn btn-success mb-5 float-right w-25" type="submit">Submit</button>
+    </form>
   </div>
 
   </div>
-
 
 {% endblock %}
