--- a/perfil/templates/perfil/reset_senha.html
+++ b/perfil/templates/perfil/reset_senha.html
@@ -13,7 +13,8 @@
     <h3>Restaurar sua Senha </h3>
       <hr>
   </div>
- 
+
+  <div id="tela-verificacao" class="row">
   <div class="form-group col-md-8 offset-md-2">
   
     <p> Selecione sua Unidade : </p>
@@ -42,7 +43,9 @@
 
   <div class="form-group col-md-8 offset-md-2">
     <a href="{% url 'chamados:enviar' %}" class="btn btn-warning ml-3 float-right w-25" role="button">Voltar</a>
-    <button type="submit" id="send-answer" class="btn btn-success ml-3 float-right w-25">Enviar Resposta</button>
+    <button type="submit" id="send-answer" class="btn btn-success ml-3 float-right w-25">Enviar</button>
+  </div>
+
   </div>
 
   <div class="form-group col-md-8 offset-md-2" id="reset-password">
@@ -51,13 +54,12 @@
       <p> Nova Senha: </p>
       <input type="text" class="form-control" name="new_password1" id="id_new_password1">
   
-      <p> Confirmação de Nova Senha: </p>
+      <p> Confirmação de Nova Senha : </p>
       <input type="text" class="form-control" name="new_password2" id="id_new_password2">
+      <button class="btn btn-success float-right mt-3 w-25" type="submit">Enviar</button>
+      <div class="mb-5"></div>
   
-      <button class="btn btn-success mb-5 float-right w-25" type="submit">Submit</button>
     </form>
-  </div>
-
   </div>
 
 {% endblock %}
