--- a/perfil/templates/perfil/login.html
+++ b/perfil/templates/perfil/login.html
@@ -12,6 +12,7 @@
   <div class="col-md-8 offset-md-2">
     <h3 class="">Fazer Login</h3>
       <hr>
+      
 <form method="POST">
 {% csrf_token %}
 <div class="row">
@@ -34,7 +35,7 @@
 <div class="col-md-12">
   <button type="reset"  class="btn btn-warning float-right ml-2 w-25" value="Reset">Limpar</button>
   <button type="submit" class="btn btn-success float-right w-25">Entrar</button>
-  <a href="{% url 'perfil:reset_password' %}" type="button" class="btn btn-info">Esqueci minha senha</a>
+  <a href="{% url 'perfil:verifica_admissao' %}" type="button" class="btn btn-info">Esqueci minha senha</a>
  </div>
  </div>
 
