--- a/chamados/templates/chamados/tickets_por_funcionarios.html
+++ b/chamados/templates/chamados/tickets_por_funcionarios.html
@@ -18,33 +18,47 @@
                 readonly>
         </div> {% endcomment %}
         <div class="form-group col-md-6">
-            <label for="re">RE : </label>
+            <label for="re"><strong> Registro : </strong> </label>
             <input type="number" class="form-control" id="funcionario" name="funcionario" maxlength="5" minlength="4"
                 value="{{ ticket.funcionario.re_funcionario }}" readonly>
         </div>
         <div class="form-group col-md-6">
-            <label for="re">Nome do Funcionário : </label>
+            <label for="re"><strong> Nome do Funcionário : </strong> </label>
             <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite um RE válido."
                 value="{{ ticket.funcionario.nome }}" readonly>
         </div>
         <div class="form-group col-md-6">
-            <label for="ramal">Ramal / Telefone : </label>
+            <label for="ramal"> <strong> Ramal : </strong> </label>
             <input type="number" class="form-control" id="ramal" name="ramal" value="{{ ticket.funcionario.ramal }}"
                 readonly>
         </div>
+
         <div class="form-group col-md-6">
-            <label for="email">Email Funcionário : </label>
+            <label for="email"><strong> Email Corporativo : </strong> </label>
             <input type="email" class="form-control" id="email_corporativo" name="email_corporativo" value="{{ ticket.funcionario.email_corporativo }}"
                 readonly>
         </div>
+
+        <div class="form-group  col-md-6">
+            <label for="telefone"><strong>Telefone : </strong></label>
+            <input type="text" class="form-control" id="telefone_edit" name="telefone" value="{{ ticket.funcionario.telefone }}"
+            readonly>
+        </div>
+
+        <div class="form-group  col-md-6">
+            <label for="email"><strong>Email Pessoal: </strong></label>
+            <input type="email" class="form-control" id="email_edit_chamados" name="email" value="{{ ticket.funcionario.email }}"
+            readonly>
+        </div>
+
         <div class="form-group col-md-6">
-            <label> Categoria : </label>
+            <label> <strong> Categoria : </strong> </label>
             <select name="categoria" class="select form-control form-control" id="categoria" readonly>
                 <option value="{{ ticket.categoria.id }}">{{ ticket.categoria }}</option>
             </select>
         </div>
         <div class="form-group col-md-6">
-            <label> Subcategoria : </label>
+            <label><strong> Subcategoria : </strong> </label>
             <select name="subcategoria" class="select form-control form-control" id="subcategoria" readonly>
                 <option value="{{ ticket.subcategoria.id }}">{{ ticket.subcategoria }}</option>
             </select>
