--- a/perfil/templates/perfil/login.html
+++ b/perfil/templates/perfil/login.html
@@ -13,7 +13,7 @@
     <h3 class="">Fazer Login</h3>
       <hr>
       
-<form method="POST">
+<form method="POST" autocomplete="off">
 {% csrf_token %}
 <div class="row">
   <div class="col-md-12">
