--- a/perfil/templates/perfil/modificar_senha.html
+++ b/perfil/templates/perfil/modificar_senha.html
@@ -27,9 +27,9 @@
 <input type="text" id="admissao" name="admissao" class="form-control" data-mask="00/00/0000" placeholder="DD/MM/AAAA"">
 </div>
 
-<div class="form-group col-md-12 ml-3">
+<!-- <div class="form-group col-md-12 ml-3">
 {{ form.new_password1.help_text }}
-</div>
+</div> -->
 
 <div class="form-group col-md-12">
 <label for="numero_registro">Nova Senha: </label>
