--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -146,7 +146,7 @@
 
           success: function (data) {
           console.log(unidade)
-          jconcatenar = Query("#id_username").val(unidade + funcionario_login)
+          concatenar = Query("#id_username").val(unidade + funcionario_login)
           },
   
           error: function (xhr) {
