--- a/perfil/templates/perfil/login.html
+++ b/perfil/templates/perfil/login.html
@@ -13,7 +13,7 @@
     <h3 class="">Fazer Login</h3>
       <hr>
       
-<form method="POST">
+<form method="POST" autocomplete="off">
 {% csrf_token %}
 <div class="row">
   <div class="col-md-12">
@@ -34,8 +34,10 @@
   </div>
 <div class="col-md-12">
   <button type="reset"  class="btn btn-warning float-right ml-2 w-25" value="Reset">Limpar</button>
+
   <button type="submit" class="btn btn-success float-right w-25">Entrar</button>
   <a href="{% url 'perfil:verifica_admissao' %}" type="button" class="btn btn-info">Esqueci minha senha</a>
+
  </div>
  </div>
 
