--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,8 @@
       
 {% include 'parciais/_nav.html' %}
 
-
 {% include 'parciais/_messages.html' %}
-<main role="main" class="container border rounded p-5 bg-light shadow mb-5">
+<main role="main" id="principal" class="container border rounded p-5 bg-light shadow mb-5">
 {% block conteudo %} {% endblock %}
 </main>
 
