--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -319,3 +319,20 @@
   });
 </script>
 
+<script type="text/javascript">
+  $(document).ready(function() {
+    
+  $("ul#topnav li").hover(function() { //Hover over event on list item
+    $(this).css({ 'background' : '#555'}); //Add background color + image on hovered list item
+    $(this).find("span").show(); //Show the subnav
+  } , function() { //on hover out...
+    $(this).css({ 'background' : 'none'}); //Ditch the background
+    $(this).find("span").hide(); //Hide the subnav
+  });
+  if($(this).find("span").hide()){
+    $(this).find("span").show(); //Show the subnav
+  }
+  });
+  </script>
+  </head>
+
