--- a/templates/parciais/_nav.html
+++ b/templates/parciais/_nav.html
@@ -1,9 +1,52 @@
 {% load static %}
 {% load filters %}
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4 h-25">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark p-0 mb-4">
+  <ul id="topnav" class="mb-4">
+    {% if user.is_authenticated %}
+    {% if request.user|belong_group:"ADMINISTRADORES" %}
+    <li>
+      <a href="#">Administrador</a>
+        <span> 
+          <a href="#"></a>
+        </span>
+    </li>
+    {% else %}
+    {% endif %}
+    {% if request.user|belong_group:"RH" %}
+    <li>
+        <a href="#">RH</a>
+        <span>
+          <a href="#"></a>
+        </span>
+    </li>
+    {% else %}
+    {% endif %}
+    <li>
+        <a href="#">{{ request.user.funcionario.nome }}</a>
+        <span>
+          <a href="{% url 'perfil:perfil' %}">Perfil</a>
+          <a href="{% url 'perfil:espelho' %}">Espelho</a>
+          <a href="{% url 'chamados:enviar' %}">Chamado</a>
+          <a href="{% url 'chamados:listar' %}">Tickets</a>
+        </span>
+    </li>
+    <li>
+      <a  href="{% url 'perfil:meu_logout' %}"><i  class="fas fa-power-off"></i></a>
+    </li>
+    <div class="float-right mr-2">
+      <img src="{% static 'img/logo.png' %}" alt="Vitesco" width="100" height="50">
+      <img id="logo" src="{% static 'img/logo2.png' %}" alt="Continental" width="100" height="50">
+    </div>
+      {% else %}
+      <div class="float-right mr-2">
+      <img src="{% static 'img/logo.png' %}" alt="Vitesco" width="100" height="50">
+      <img id="logo" src="{% static 'img/logo2.png' %}" alt="Continental" width="100" height="50">
+    </div>
+      {% endif %}
+  </ul>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+  <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -64,7 +107,7 @@
         
         {% endif %}
     </ul>
-  </div>
+  </div> -->
 </nav>
 
 <!-- Fails xD-->
