--- a/templates/parciais/_nav.html
+++ b/templates/parciais/_nav.html
@@ -39,7 +39,7 @@
       <img id="logo" src="{% static 'img/logo2.png' %}" alt="Continental" width="100" height="45">
     </div>
       {% else %}
-      <div class="float-right mr-3">
+      <div class="float-right mr-2 mt-2">
       <img src="{% static 'img/logo.png' %}" alt="Vitesco" width="100" height="40">
       <img id="logo" src="{% static 'img/logo2.png' %}" alt="Continental" width="100" height="40">
     </div>
