--- a/chamados/templates/chamados/listar.html
+++ b/chamados/templates/chamados/listar.html
@@ -10,12 +10,12 @@
       <hr>
 
 <div class="row">
-<div class="col-md-4 mb-2">
+<!-- <div class="col-md-4 mb-2">
 <input type="text" class="form-control" id="pesquisar" name="pesquisar" value="" placeholder="Digite a categoria ou Nome">
 </div>
 <div class="col-md-2 mb-2">
 <button type="button" class="btn btn-primary">Pesquisar</button>
-</div>
+</div> -->
 </div>
 
 <div class="row p-2">
