Enviando para produção

--- a/perfil/templates/perfil/logout.html
+++ b/perfil/templates/perfil/logout.html
@@ -14,7 +14,7 @@
 <div>
 <small class="text-muted">
 <hr/>
-<a href="{% url 'perfil:login' %}"> Fazer&nbsp;login&nbsp;novamente </a>
+<p class="h4"><a href="{% url 'perfil:login' %}"> Fazer&nbsp;login&nbsp;novamente </a></p>
 </small>
 </div>
 
