--- a/templates/parciais/_nav.html
+++ b/templates/parciais/_nav.html
@@ -8,7 +8,7 @@
     <li id="li-admin">
       <a href="#">Administrador</a>
         <span> 
-          <a href="#"></a>
+          <a href="{% url 'perfil:unidade_admin' %}">Unidade</a>
         </span>
     </li>
     {% else %}
@@ -35,13 +35,13 @@
       <a  href="{% url 'perfil:meu_logout' %}"><i  class="fas fa-power-off"></i></a>
     </li>
     <div class="float-right mr-2 mt-2">
-      <img src="{% static 'img/logo.png' %}" alt="Vitesco" width="100" height="45">
-      <img id="logo" src="{% static 'img/logo2.png' %}" alt="Continental" width="100" height="45">
+      <img src="{% static 'img/logo.png' %}" alt="Vitesco" width="100" height="50">
+      <img id="logo" src="{% static 'img/logo2.png' %}" alt="Continental" width="100" height="50">
     </div>
       {% else %}
-      <div class="float-right mr-3">
-      <img src="{% static 'img/logo.png' %}" alt="Vitesco" width="100" height="40">
-      <img id="logo" src="{% static 'img/logo2.png' %}" alt="Continental" width="100" height="40">
+      <div class="float-right mr-2 mt-2">
+      <img src="{% static 'img/logo.png' %}" alt="Vitesco" width="100" height="50">
+      <img id="logo" src="{% static 'img/logo2.png' %}" alt="Continental" width="100" height="50">
     </div>
       {% endif %}
   </ul>
