--- a/perfil/templates/unidade/unidade_create.html
+++ b/perfil/templates/unidade/unidade_create.html
@@ -75,8 +75,8 @@
           <li class="list-group-item" id="pesquisar-membro" style="width: 25%;">
           <input class="form-control mr-sm-2" type="text" placeholder="Pesquisar" aria-label="Search">
           </li>
-          <li class="list-group-item" id="button-submit" style="width: 18%;">
-          <button class="btn btn-success" type="submit">Enviar&nbsp;</button>
+          <li class="list-group-item" id="button-submit" style="width: 24%;">
+          <button class="btn btn-success" type="submit">Enviar</button>
           </li>
           </form>
       </ul>
@@ -118,9 +118,26 @@
         <div class="col-md-12 mt-3">
         <a href="#" id="adicionar-categoria"><img  class="mb-1" src="{% static 'img/add.png' %}" alt="Adicionar"></a>
         <label>Categoria (Define categoria para pessoas):</label>
+        <div class="form-group col-md-6">
+
         <div id="mostrar-categoria">
-        <p> Something times I feel i little wrong. </p>
+            <p> Categorias : </p>
+            <select name="categoria" class="select form-control form-control mt-0" id="categoria-admin">
+              <option value="" selected="">----------</option>
+              <option value="1">Benéficios</option>
+              </select>
         </div>
+      </div>
+
+        <div class="form-group col-md-6">
+
+        <div id="mostrar-subcategoria">
+            <p> Subcategoria : </p>
+            <select name="subcategoria" class="select form-control form-control mt-0" id="subcategoria-admin">
+              <option value="48">Cesta Básica</option>
+              <option value="49">Compra Pneu</option>
+              <option value="50">Convênio Médico</option>
+          </div>
         </div>
 
           <div class="col-md-12 mt-4">
