--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -386,7 +386,7 @@ $('#adicionar-grupo').click(function(){
   $('#administrador').hide();
 })
 
-// List of HR ...
+// List of HR ... 2.0
 $('#list-RH').click(function() {
   $('#list-RH').addClass("active");
   $('#list-GESTORES').removeClass("active");
