--- a/perfil/templates/unidade/unidade_update.html
+++ b/perfil/templates/unidade/unidade_update.html
@@ -5,9 +5,10 @@
 
 {% block conteudo %}
 
+
 <h2 class="mb-4"><strong>{{ unidade.nome }}</strong></h2>
 <hr>
-<form method="POST" enctype="multipart/form-data" action="{% url 'perfil:update_unidade_admin' unidade.id %}">
+<form method="POST" enctype="multipart/form-data" action="{% url 'perfil:update_email_admin' unidade.id %}">
     {% csrf_token %}
 
     <div class="form-row">
@@ -22,16 +23,26 @@
 
         <div class="col-md-12 mt-3">
         <a href="#" id="adicionar-email"><img  class="mb-1" src="{% static 'img/add.png' %}" alt="Adicionar"></a>
-            <label>E-mail (define endereço disparador) : </label>
+            <label>E-mail (Define endereço disparador) : </label>
         </div>
 
         <div class="col-md-6" id="email-disparador">
             <input type="email" class="form-control" name="email" id="email" value="{{ unidade.email }}"
           placeholder="Ex: rhsalto.au_gs_fa@continental-corporation.com">
-          </div>
+        
+      </form>
+      <div class="col-md-12 mt-4">
+      <button type="submit" class="btn btn-success w-50">Salvar novo e-mail</button>
+      <a href="{% url 'perfil:unidade_admin' %}" class="btn btn-warning pr-5 pl-5 ">Voltar</a>
+      </div>
+
+        </div>
+
         <div class="col-md-12 mt-3">
+<form method="POST" enctype="multipart/form-data" action="{% url 'perfil:update_unidade_admin' unidade.id %}">
+      {% csrf_token %}
         <a href="#" id="adicionar-menu"><img  class="mb-1" src="{% static 'img/add.png' %}" alt="Adicionar"></a>
-        <label>Menu (define menus visualizados) :</label>
+        <label>Menu (Define menus visualizados) :</label>
 
         <div id="check-menu">
           <div class="form-check">
@@ -46,92 +57,85 @@
                 </ul>
             </div>
             </div>
+            </form>
+        <div class="col-md-12 mt-4">
+        <button type="submit" class="btn btn-success w-25">Salvar menus</button>
+        <a href="{% url 'perfil:unidade_admin' %}" class="btn btn-warning pr-5 pl-5 ">Voltar</a>
         </div>
+        </div>
+        
         </div>
 
         <div class="col-md-12 mt-3">
+<form method="POST" enctype="multipart/form-data" action="{% url 'perfil:update_unidade_admin' unidade.id %}">
+        {% csrf_token %}
             <a href="#" id="adicionar-grupo"><img  class="mb-1" src="{% static 'img/add.png' %}" alt="Adicionar"></a>
             <label>Grupo (Define grupo para pessoas):</label>
-            <div id="grupo" class="col-md-10">
+            <div id="grupo" class="col-md-8">
               
-          <div class="card">
-          <ul class="list-group list-group-horizontal">
-            {% for name in unidade.grupo.all %}
-              <li class="list-group-item" id="list-{{ name }}" style="width: 22%;"><span class="mr-1 ml-1">{{ name }}</span></li>
-            {% endfor %}
-              <form class="form-inline">
-              <li class="list-group-item" id="pesquisar-membro" style="width: 25%;">
-              <input class="form-control mr-sm-2" type="text" placeholder="Pesquisar" aria-label="Search">
-              </li>
-              <li class="list-group-item" id="button-submit" style="width: 24%;">
-              <button class="btn btn-success" type="submit">Enviar</button>
-              </li>
-              </form>
-          </ul>
-
-          <div class="card-body" id="rh">
-            <ul class="list-group">
-              {% for group in group_list_RH %}
-                  {% for user in group.user_set.all %}
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                  <span id="re" style="width: 30%;">{{ user.funcionario.re_funcionario }}</span>
-                  <span id="nome" style="width: 60%;">{{ user.funcionario.nome }}</span>
-                  <a href="#" id="remove-rh"><img src="{% static 'assets\icons\cancel.png' %}"></a>
-                  </li>
-                  {% endfor %}
-                  {% endfor %}
-            </ul>
-            </div>
-
-            <div class="card-body" id="gestor">
-              <ul class="list-group">
-                {% for group in group_list_GESTORES %}
-                  {% for user in group.user_set.all %}
-                <li class="list-group-item d-flex justify-content-between align-items-center">
-                  <span id="re" style="width: 30%;">{{ user.funcionario.re_funcionario }}</span>
-                  <span id="nome" style="width: 60%;">{{ user.funcionario.nome }}</span>
-                  <a href="#" id="remove-gestor"><img src="{% static 'assets\icons\cancel.png' %}"></a>
-                  </li>
-                  {% endfor %}
-                  {% endfor %}
-              </ul>
-              </div>
+          <div class="row p-2">
+                <table class="table table-striped table-responsive border rounded bg-light shadow">
+                  <thead class="thead-dark">
+                    <tr>
+                      <th scope="col" style="width: 20%; text-align : left;">Grupo</th>
+                      <th scope="col" style="width: 25%; text-align : left;">Funcionário</th>
+                      <th scope="col" style="width: 8%; text-align : left;"></th>
+                    </tr>
+                  </thead>
+                  <tbody>   
+                    <tr>
+                      <td style="text-align : left;">
+                        <select name="grupo" id="grupo_unidade" class="select form-control form-control">
+                          <option value="" selected>----------</option>
+                          {% for group in group %}
+                          <option name="selected_group" value="{{ group.id }}">{{ group.name }}</option>
+                          {% endfor %}
+                        </select>
+                      </td>
+                      <td scope="row" style="text-align : left;">
+                        <input class="form-control mr-sm-2" type="text" placeholder="Digite o RE do Funcionário" aria-label="Search">
+                      </td>
+                      <td style="text-align : left;">
+                        </form>
+                        <button class="btn btn-success pr-5 pl-5">Adicionar</button>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+                
         
-        <div class="card-body" id="administrador">
-        <ul class="list-group">
-          {% for group in group_list_ADMINISTRADORES %}
-          {% for user in group.user_set.all %}
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            <span id="re" style="width: 30%;">{{ user.funcionario.re_funcionario }}</span>
-            <span id="nome" style="width: 60%;">{{ user.funcionario.nome }}</span>
-            <a href="#" id="remove-administradores"><img src="{% static 'assets\icons\cancel.png' %}"></a>
-            </li>
-            {% endfor %}
-            {% endfor %}
-        </ul>
-        
-        </div>
+                  {% comment %} <table class="table table-striped table-responsive border rounded bg-light shadow mt-4">
+                    <thead class="thead-dark">
+                      <tr>
+                        <th scope="col" style="width: 10%; text-align : left;">RE</th>
+                        <th scope="col" style="width: 25%; text-align : left;">Funcionário</th>
+                        <th scope="col" style="width: 7%; text-align : left;"></th>
+                      </tr>
+                    </thead>
+                    <tbody>   
+                      for group in group 
+                       for user in group.user_set.all 
+                      <tr>
+                        <td scope="row" style="text-align : left;">{{ user.funcionario.re_funcionario }}</td>
+                        <td scope="row" style="text-align : left;">{{ user.funcionario.nome }}</td>
+                        <td scope="row" style="text-align : left;">
+                          <a href="#" id="remove-categoria">
+                          <img src="{% static 'assets\icons\cancel.png' %}"></a>
+                        </td>      
+                      </tr>
+                       endfor 
+                         endfor  
+                    </tbody>
+                  </table> {% endcomment %}
 
-        <div class="card-body" id="funcionario">
-          <ul class="list-group">
-            {% for group in group_list_FUNCIONARIOS %}
-            {% for user in group.user_set.all %}
-            <li class="list-group-item d-flex justify-content-between align-items-center">
-              <span id="re" style="width: 30%;">{{ user.funcionario.re_funcionario }}</span>
-              <span id="nome" style="width: 60%;">{{ user.funcionario.nome }}</span>
-              <a href="#" id="remove-funcionarios"><img src="{% static 'assets\icons\cancel.png' %}"></a>
-              </li>
-              {% endfor %}
-              {% endfor %}
-          </ul>
-          </div>
-
-        </div>
-          
-            </div>
+                </div> <!-- ./ row -->
+      </div>
+            
             </div>
         
             <div class="col-md-12 mt-3">
+<form method="POST" enctype="multipart/form-data" action="{% url 'perfil:update_unidade_admin' unidade.id %}">
+{% csrf_token %}
             <a href="#" id="adicionar-categoria"><img  class="mb-1" src="{% static 'img/add.png' %}" alt="Adicionar"></a>
             <label>Categoria (Define categoria para pessoas):</label>
         
@@ -151,13 +155,17 @@
                       <td style="text-align : left;">
                         <select name="categoria" class="select form-control form-control" id="categoria">
                           <option value="" selected>----------</option>
-                          <option value="Teste">Teste</option>
+                          {% for categoria in categoria %}
+                          <option name="categoria" id="categoria" value="{{ categoria.id }}"> {{ categoria.nome }}</option>
+                          {% endfor %}
                         </select>
                       </td>
                       <td scope="row" style="text-align : left;">
                         <select name="subcategoria" class="select form-control form-control" id="subcategoria">
                           <option value="" selected>----------</option>
-                          <option value="Teste">Teste</option>
+                         {% for subcategoria in subcategoria %}
+                          <option name="subcategoria" id="subcategoria" value="{{ subcategoria.id }}"> {{ subcategoria.nome }}</option>
+                          {% endfor %}
                         </select>
                       </td>
                       <td style="text-align : left;">
@@ -165,7 +173,8 @@
                         placeholder="Digite o RE do Funcionário" name="funcionario" id="funcionario">
                       </td>
                       <td style="text-align : left;">
-                        <button class="btn btn-success" type="submit">Adicionar</button>
+</form>
+                        <button class="btn btn-success w-100" type="submit">Adicionar</button>
                       </td>
                     </tr>
                   </tbody>
@@ -193,16 +202,6 @@
                     </tbody>
                   </table>
                 </div>
-        
-        </div>
-
- 
-    
-    <div class="col-md-12 mt-4">
-      <button type="submit" class="btn btn-success w-25">Salvar Configuração</button>
-      <a href="{% url 'perfil:unidade_admin' %}" class="btn btn-warning w-25">Voltar</a>
-  </div>
-    </form>
 {% endblock %}
 
 
