--- a/perfil/templates/perfil/modificar_senha.html
+++ b/perfil/templates/perfil/modificar_senha.html
@@ -27,14 +27,22 @@
 <input type="text" id="admissao" name="admissao" class="form-control" data-mask="00/00/0000" placeholder="DD/MM/AAAA"">
 </div>
 
-<!-- <div class="form-group col-md-12 ml-3">
-{{ form.new_password1.help_text }}
-</div> -->
 
 <div class="form-group col-md-12">
 <label for="numero_registro">Nova Senha: </label>
 <input type="password" id="new_password1" name="new_password1" class="form-control">
 </div>
+
+<div class="form-group col-md-12 ml-3">
+  <ul>
+    <li>
+      <p class="mb-1"> A senha deve conter 8 dígitos, com 1 letra maiúscula, 1 número e 1 caracter especial.</p>
+      <strong>Exemplo:</strong> Vitesco1@ (aconselhamos não utilizar o exemplo).
+
+    </li>
+  </ul>
+  <!-- {{ form.new_password1.help_text }} -->
+  </div>
 
 <div class="form-group col-md-12">
   <label for="numero_registro">Confirmação da Senha : </label>
